add embed button

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ layout: home
 
       <div class="col-md-6" id="stories-area">
         <div class="hidden-xs hidden-sm visible-safari" style="height:110px; display: none;"></div>
+	<h1 class="text-center"><a class="btn btn-default btn-primary" href="/HOW-TO-EMBED.md" role="button">Embed TaxClock</a></h1>
         <h1 class="text-center">. . .</h1>
         <h3>Latest headlines:</h3>
         <div id="stories-news">
